# gameX

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/game-core/: CMakeLists.txt  game.cpp  game.hpp  map.cpp  map.hpp  movement.cpp  movement.hpp  player.cpp  player.hpp  window.cpp  window.hpp
